[gd_scene load_steps=3 format=3 uid="uid://dupuh8cumos1"]

[ext_resource type="Script" path="res://scripts/interact_detection.gd" id="1_x2j7n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ilywk"]
radius = 171.493

[node name="interact_detection" type="Area2D"]
script = ExtResource("1_x2j7n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ilywk")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
